# spacegame

./: CMakeLists.txt  README.md  base.c  main.c  mainOutline  makefile  spacegame  starSystems
include/: base.h
resources/include/: base.h
